Simplify footer text in email layout
Updated footer text to remove redundant wording.

--- a/Specialized Areas/Notifications/Modern Email Layout Designs/script.html
+++ b/Specialized Areas/Notifications/Modern Email Layout Designs/script.html
@@ -77,7 +77,7 @@
 
   <!-- Footer -->
   <div class="footer">
-    &copy; ${gs.dateGenerate().getYear()} Travel & Expense Portal. All Rights
+    Travel & Expense. All Rights
     Reserved.<br />
     <br />
     <a href="${NOTIF_UNSUB}">Unsubscribe</a> |
