Fix typo in output preview heading

--- a/Modern Development/Service Portal Widgets/Emoji Replacer Widget/HTML.html
+++ b/Modern Development/Service Portal Widgets/Emoji Replacer Widget/HTML.html
@@ -9,7 +9,7 @@
         placeholder="Type your message here..."></textarea>
   <div class ="mt-3">
     <h5>
-      Ouput Preview:
+      Output Preview:
     </h5>
     <div class="p-2 border rounded bg-light" ng-bind-html="c.outputText">
       
